# HireMeAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setups.md
api/: main.py
api/routes/: chat.py
api/routes/ingestion/: resume.py  router.py
api/schemas/: ingestion.py
apps/api/: main.py
apps/api/routes/: chat.py
apps/webapp/: main.py
frontend/: index.html
frontend/css/: about.css  chat.css  dashboard.css  global.css  ingest.css
frontend/js/: about.js  app.js  chat.js  dashboard.js  ingest.js
frontend/pages/: about.html  chat.html  dashboard.html  ingest.html
notebooks/: experiments.ipynb  langgraph_revision.ipynb  rag_chunks.json  rag_chunks.txt
src/: config.py  settings.py
src/agents/: graph.py  nodes.py  runner.py  state.py
src/ingestion/chunking/: resume_chunking.py
src/ingestion/collectors/: resume.py
src/ingestion/embeddings/: engine.py
src/ingestion/processors/: chunker.py
src/ingestion/services/: resume_ingestion.py
src/metrics/: langsmith_fetcher.py  ragas_eval.py  store.py
src/retrieval/: retriever.py
src/services/: qdrant.py
src/services/llms/: openai.py  prompts.py
src/services/openai/: client.py  embeddings.py
src/services/qdrant/: client.py  store.py
src/utils/: extract_pdf.py
