[project]
name = "hiremeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.5",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
]
